2002-12-31  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/doc/reference.xml: Fix typo.

2002-12-23  Mark Mitchell  <mark@codesourcery.com>

	* qm/extension.py (get_class_arguments): Use the __dict__ of the
	class, rather than a direct attribute reference, when checking to
	see if the argument list has already been computed.
	(get_class_arguments_as_dictionary): Likewise.

2002-12-23  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/test.py (Test.TestField): Fix typo in comment.

2002-12-20  Mark Mitchell  <mark@codesourcery.com>

	* qm/extension.py (get_class_arguments): Allow derived classe
	arguments to override base class arguments.
	(get_class_arguments_as_dictionary): Reimplement.
	* tests/xmldb/QMTest/test_inheritance.py: New file.
	* tests/xmldb/QMTest/classes.qms: Update.
	* tests/xmldb/api.qms/test.qms/derived.qmt: New test.

2002-12-18  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/classes/file.py (SubstitutionField): Rework, using
	TupleField as a base class.
	(FileContentsTest.Run): Remove exception-handling code.
	(FileContentsTest.__PerformSubstitutions): Correct.
	* NEWS: Mention change.
	
2002-12-18  Vladimir Prus <ghost@cs.msu.su>
            Mark Mitchell  <mark@codesourcery.com>

	* qm/extension.py (parse_dom_element): Add attachment_store
	parameter.
	* qm/test/classes/xml_database.py: 
	(XMLDatabase._StoreAttachments): New method
	(XMLDatabase.WriteTest): Call it.
	(XMLDatabase.WriteResource): Likewise.
	(XMLDatabase.__ParseTestDocument): Pass store to parse_dom_element.
	(AttachmentStore.__init__): Call base class __init__.
	(AttachmentStore.Store): Correct typo.
	(AttachmentStore.__MakeDataFilePath): Fix path calculation.

2002-12-18  Mark Mitchell  <mark@codesourcery.com>

	* qm/fields.py (ChoiceField): New class.
	* qm/test/test.py (Test.ResourceField): Likewise.
	(Test.TestField): Likewise.
	(Test.arguments): Use them.

2002-12-17  Mark Mitchell  <mark@codesourcery.com>
